--- a/docker-hub-secret.yml
+++ b/docker-hub-secret.yml
@@ -5,6 +5,6 @@ metadata:
 data:
   env_vars:
     - name: DOCKER_USERNAME
-      value: "username"
+      value: "lubz"
     - name: DOCKER_PASSWORD
-      value: "secret"
+      value: "Superman@1984"
